列表页基本完成

--- a/src/html/goodlist.html
+++ b/src/html/goodlist.html
@@ -71,10 +71,10 @@
                     <div class="title sort-type">
                         <dl class="clearfix fl">
                             <dt>排序方式：</dt>
-                            <dd ><a class="active" href="javascript:void(0);" title="默认排序">默认</a></dd>
-                            <dd ><a class="desc" href="javascript:void(0);" title="销售">销售<i></i></a></dd>
-                            <dd ><a class="asc" href="javascript:void(0);" title="人气">人气<i></i></a></dd>
-                            <dd><a href="javascript:void(0);" title="价格">价格<i></i></a></dd>
+                            <dd ><a class="active default" href="javascript:void(0);" title="默认排序">默认</a></dd>
+                            <dd ><a class="sale" href="javascript:void(0);" title="销售">销售<i></i></a></dd>
+                            <dd ><a class="popularity" href="javascript:void(0);" title="人气">人气<i></i></a></dd>
+                            <dd><a class="price" href="javascript:void(0);" title="价格">价格<i></i></a></dd>
                         </dl>
                         <p class="fl">商品所在地：</p>
                         <div class="address-select fl">
@@ -138,33 +138,29 @@
                         <span class="fr page  nextpage">下一页</span>
                         <span class="fr page none prepage">上一页</span>
                     </div>
-                    <ul class="current-goodlist clearfix">
-                        <li>
-                            <div class="item">
-                                <img src="../img/shoplist/100.jpg" alt="">
-                                <div class="warp">
-                                    <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
-                                    <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
-                                    <p class="stock">库存<span>999</span></p>
+                        <ul class="current-goodlist clearfix">
+                            <li>
+                                <div class="item">
+                                    <img src="../img/shoplist/100.jpg" alt="">
+                                    <div class="warp">
+                                        <p class="name">新中源 釉面砖客厅全抛釉瓷砖地砖地板砖墙砖金刚釉8008 800*800</p>
+                                        <p class="price-warp"><em><span>¥</span><span class="price">69.00</span></em> ¥<del>276.00</del></p> 
+                                        <p class="stock">库存<span>999</span></p>
+                                    </div>
                                 </div>
+                            </li>
+                        </ul>
+                        <div class="goodlist-page">
+                            <div class="page">
+                                <span class=" none tag"><a class="fister" href="javascript:void(0);">首页</a></span>
+                                <span class=" none intag"><a class="prevpage" href="javascript:void(0);">上一页</a></span>
+                                <em class="currentnum">
+                               
+                                </em>
+                                <span class="intag"><a class="nextpage" href="javascript:void(0);">下一页</a></span>
+                                <span class="last tag"><a class="endpage" href="javascript:void(0);">末页</a></span>
                             </div>
-                        </li>
-                    </ul>
-                    <div class="goodlist-page">
-                        <div class="page">
-                            <span class="fister none tag"><a href="#">首页</a></span>
-                            <span class="prevpage none intag"><a href="#">上一页</a></span>
-                            <span class="num current"><a href="#">1</a></span>
-                            <span class="num"><a href="#">2</a></span>
-                            <span class="num"><a href="#">3</a></span>
-                            <span class="num"><a href="#">4</a></span>
-                            <span class="num"><a href="#">5</a></span>
-                            <span class="num"><a href="#">6</a></span>
-                            <span class="more"><a href="#">...</a></span>
-                            <span class="nextpage intag"><a href="#">下一页</a></span>
-                            <span class="endpage tag"><a href="#">末页</a></span>
                         </div>
-                    </div>
                     <div class="likethink">
                         <div class="title">猜您喜欢的宝贝</div>
                         <div class="likeshop">
