--- a/src/html/gooddetails.html
+++ b/src/html/gooddetails.html
@@ -439,6 +439,7 @@
                 </div>
         </div>
     </div>
-    <div id="pub-footer"></div>    
+    <div id="pub-footer"></div> 
+    <script src="../js/require.js" data-main="../js/gooddetails"></script>
 </body>
 </html>
