详情页放大镜完成

--- a/src/html/gooddetails.html
+++ b/src/html/gooddetails.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/top.css">
     <link rel="stylesheet" href="../css/bottom.css">
     <link rel="stylesheet" href="../css/gooddetails.css">
+    <link rel="stylesheet" href="../lib/jquery-lgzzoom/jquery.lgzzoom.css">
 </head>
 <body>
     <div id="pub-header"></div>
@@ -28,9 +29,9 @@
                         <div class="image-wrap fl">
                             <!-- 大图 -->
                             <div class="big-image">
-                                <span>
+                                <div>
                                     <img src="../img/shopdetails/beb/5507_05251898317200556_360.jpg" alt="">
-                                </span>
+                                </div>
                             </div>
                             <div class="img-list">
                                     <a class="prev fl">&lt;</a>
